add standard test target to build using ctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set (CMAKE_CXX_STANDARD 11)
 set (CUSTOM_TEST_DRIVER "${CMAKE_CURRENT_LIST_DIR}/lib/tap")
 set (HEADER_DIR "${PROJECT_SOURCE_DIR}/lib/include")
 
+enable_testing ()
+
 include_directories (${HEADER_DIR})
 
 add_subdirectory (lib/src)
